SFOS-117: security setup for Avalanche server.